<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="movieDetail"
            type="com.example.popularmovies.data.model.MovieDetailModel" />

        <variable
            name="genreString"
            type="String" />

        <variable
            name="spokenLanguagesString"
            type="String" />

        <variable
            name="productionCountriesString"
            type="String" />

        <variable
            name="loading"
            type="Boolean" />

        <variable
            name="error"
            type="Boolean" />

        <variable
            name="retry"
            type="com.example.popularmovies.data.interfaces.IViewClicked" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:visibility="@{loading ? View.GONE : View.VISIBLE}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".ui.MovieDetailFragment">

                <ImageView
                    android:id="@+id/imageMovie"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:scaleType="centerCrop" />

                <!--        title-->
                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Title: ` + movieDetail.title}"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <!--releaseDate-->
                <TextView
                    android:id="@+id/releaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Release Date: ` + movieDetail.releaseDate}"
                    android:textSize="14sp" />

                <!--        status-->
                <TextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Status: ` + movieDetail.status}" />

                <!--        genres-->
                <TextView
                    android:id="@+id/genres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Genres: ` + genreString}" />

                <!--        tagline-->
                <TextView
                    android:id="@+id/tagline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Tagline: ` + movieDetail.tagline}" />

                <!--        homepageHeader-->
                <TextView
                    android:id="@+id/homepage_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/homepage" />

                <!--        homepage-->
                <TextView
                    android:id="@+id/homepage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{movieDetail.homepage}"
                    android:textColor="@color/blue_236" />

                <!--        popularity-->
                <TextView
                    android:id="@+id/popularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Popularity: ` + String.valueOf(movieDetail.popularity)}" />

                <!--        overview-->
                <TextView
                    android:id="@+id/overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{movieDetail.overview}" />

                <!--        spokenLanguages-->
                <TextView
                    android:id="@+id/spoken_languages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`SpokenLanguages: ` + spokenLanguagesString}" />

                <!--        budget-->
                <TextView
                    android:id="@+id/budget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Budget: ` + String.valueOf(movieDetail.budget)}" />

                <!--        runtime-->
                <TextView
                    android:id="@+id/runtime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Runtime: ` + String.valueOf(movieDetail.runtime)}" />

                <!--        revenue-->
                <TextView
                    android:id="@+id/revenue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Revenue: ` + String.valueOf(movieDetail.revenue)}" />

                <!--        voteCount-->
                <TextView
                    android:id="@+id/vote_count"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Vote Count: ` + String.valueOf(movieDetail.voteCount)}" />

                <!--        originalLanguage-->
                <TextView
                    android:id="@+id/original_language"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Original Language: ` + movieDetail.originalLanguage}" />

                <!--        originalTitle-->
                <TextView
                    android:id="@+id/original_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Original Title: ` + movieDetail.originalTitle}" />

                <!--        productionCountries-->
                <TextView
                    android:id="@+id/production_countries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@{`Production Countries: ` + productionCountriesString}" />

                <!--        productionCompanies-->
                <TextView
                    android:id="@+id/production_companies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/errorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="@{error ? View.VISIBLE : View.GONE}">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/error_loading_data"
                android:textColor="@color/red"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{() -> retry.onClick()}"
                android:text="@string/retry" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/linearProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:indeterminate="true"
            android:visibility="@{loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
